# DREF-Assist

./: AI_SUGGESTIONS_FINAL_VERIFICATION.md  AI_SUGGESTIONS_FIX_SUMMARY.md  CRITERIA_MAPPING_REFERENCE.md  EVALUATION_IMPLEMENTATION.md  EVALUATION_VERIFICATION_SUMMARY.md  README.md  TECHNICAL_IMPLEMENTATION_GUIDE.md  complete_rebase.bat  final_rebase.ps1  package-lock.json  resolve_rebase.ps1  tailwind.config.ts
backend/llm_handler/: __init__.py  field_schema.py  handler.py  parser.py  prompt.py  pyproject.toml
backend/llm_handler/tests/: test_handler.py  test_parser.py  test_prompt.py
backend/media-processor/: .gitignore  media-processor-spec.md  pyproject.toml
backend/media-processor/conflict_resolver/: detector.py  manager.py  service.py
backend/media-processor/media_processor/: __init__.py  formatter.py  models.py  processor.py  router.py
backend/media-processor/media_processor/handlers/: __init__.py  audio.py  docx.py  image.py  pdf.py  video.py
backend/media-processor/media_processor/utils/: __init__.py  frame_sampler.py  perceptual_hash.py  transcription.py
backend/media-processor/services/: process_user_input_enhanced.py
backend/media-processor/tests/: __init__.py  test_detector.py  test_formatter.py  test_integration.py  test_manager.py  test_models.py  test_processor.py  test_router.py  test_service.py
backend/media-processor/tests/handlers/: test_audio.py  test_docx.py  test_image.py  test_pdf.py  test_video.py
backend/media-processor/tests/utils/: test_frame_sampler.py  test_perceptual_hash.py  test_transcription.py
backend/services/: __init__.py  assistant.py  pyproject.toml
backend/services/tests/: test_assistant.py
(+108 files in other folders)
