[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "media-processor"
version = "0.1.0"
description = "Multimodal media processor for GPT-4o"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "pymupdf>=1.23",
    "python-docx>=1.0",
    "imagehash>=4.3",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
