[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "services"
version = "0.1.0"
description = "Backend services for DREF Assist"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = ["services"]
package-dir = {"services" = "."}

[tool.pytest.ini_options]
testpaths = ["tests"]
